# QuickOpenGL_Experiments

./: .gitignore  BasicGeometryMesh.cpp  BasicGeometryMeshWorking.cpp  CMakeLists.txt  SimpleUiUsingQuads.cpp  UploadImage.cpp  plane.cpp  plane2.cpp  shader.cpp  text_render.cpp  triangle.cpp
shaders/: 2plane.frag  2plane.vert  plane.frag  plane.vert  screen.frag  screen.vert
